--- a/employee-service/applicationinsights.json
+++ b/employee-service/applicationinsights.json
@@ -2,5 +2,43 @@
     "connectionString": "InstrumentationKey=dd2190bb-408b-470a-a0e2-00e26abe9d75;IngestionEndpoint=https://eastasia-0.in.applicationinsights.azure.com/;LiveEndpoint=https://eastasia.livediagnostics.monitor.azure.com/",
     "role": {
         "name": "employee-service"
+      },
+      "preview": {
+        "captureLoggingLevelAsCustomDimension": true
+      },
+      "instrumentation": {
+        "azureSdk": {
+          "enabled": false
+        },
+        "cassandra": {
+          "enabled": false
+        },
+        "jdbc": {
+          "enabled": false
+        },
+        "jms": {
+          "enabled": false
+        },
+        "kafka": {
+          "enabled": false
+        },
+        "micrometer": {
+          "enabled": false
+        },
+        "mongo": {
+          "enabled": false
+        },
+        "rabbitmq": {
+          "enabled": false
+        },
+        "redis": {
+          "enabled": false
+        },
+        "springScheduling": {
+          "enabled": false
+        },
+        "springIntegration": {
+          "enabled": true
+        }
       }
 }
