--- a/config-service/applicationinsights.json
+++ b/config-service/applicationinsights.json
@@ -4,6 +4,22 @@
         "name": "config-server"
       },
     "preview": {
+      "captureHttpServerHeaders": {
+        "requestHeaders": [
+          "content-type"
+        ],
+        "responseHeaders": [
+          "content-type"
+        ]
+      },
+      "captureHttpClientHeaders": {
+        "requestHeaders": [
+          "content-type"
+        ],
+        "responseHeaders": [
+          "content-type"
+        ]
+      },
       "captureLoggingLevelAsCustomDimension": true
     },
     "instrumentation": {
