--- a/organization-service/organization-service.yaml
+++ b/organization-service/organization-service.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: organization-service
-        image: testdanielaaa.azurecr.io/spring/organization-service:v10
+        image: nikawang.azurecr.io/spring/organization-service:v11
         ports:
         - containerPort: 80
 
