--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:11-jdk
 ENV APP_FILE gateway-service-1.1-SNAPSHOT.jar
-ENV APPINSIGHTS_FILE applicationinsights-agent-3.3.1.jar
+ENV APPINSIGHTS_FILE applicationinsights-agent.jar
 ENV APPINSIGHTS_CONFIG applicationinsights.json
 ENV APP_HOME /app
 EXPOSE 80
